# GD32_lvgl

./: CMakeLists.txt  GD32F470ZKT_MAIN_DEBUG.ld  README.md  lv_conf.h
Core/: CMakeLists.txt
Core/include/: main.h  systick.h
Core/src/: ST7789S.c  ST7789S_driver.c  main.cpp  systick.c
cmake/: gd32.cmake
gd32f4_sys/: CMakeLists.txt  startup_f470_gnu.s  system_f470.c
gd32f4_sys/CMSIS/GD/GD32F4xx/Source/IAR/: startup_gd32f405_425.s  startup_gd32f407_427.s  startup_gd32f450_470.s
gd32f4_sys/GD32F4xx_standard_peripheral/Include/: gd32f4xx_rcu.h
gd32f4_sys/GD32F4xx_standard_peripheral/Source/: gd32f4xx_rcu.c
gd32f4_sys/GD32F4xx_usb_library/device/class/cdc/Include/: cdc_acm_core.h
gd32f4_sys/GD32F4xx_usb_library/device/class/cdc/Source/: cdc_acm_core.c
gd32f4_sys/GD32F4xx_usb_library/device/class/msc/Source/: usbd_msc_core.c
